--- a/static/template/home.html
+++ b/static/template/home.html
@@ -2,6 +2,14 @@
 
 
 {% block content %}
+
+{% if sucess %}
+
+<h1>{{sucess}}</h1>
+{% else %}
 <h2>Home</h2>
+
+{% endif %}
+    
 {% endblock content %}
     
