changing the models

--- a/static/template/signin.html
+++ b/static/template/signin.html
@@ -26,7 +26,7 @@
             </div>
         </form>
         <div class="link">
-            Create an Account ? <a  href="{% url 'register' %}">SignUp</a>
+            Create an Account ? <a class="btn btn-info btn-sm"  href="{% url 'customer_register' %}">SignUp as Customer</a>  <a class="btn btn-info btn-sm"  href="{% url 'seller_register' %}">SignUp as Seller</a>
         </div>
     </div>
     <div class="col-md-4"></div>
