--- a/static/template/customer_register.html
+++ b/static/template/customer_register.html
@@ -1,8 +1,8 @@
-{% extends 'main.html' %}
+{% load static%}
 {% load widget_tweaks %}
-
-{% block content %}
-<h2>Register</h2>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="{% static '/css/main.css' %}">
+<h2 class="mt-4 text-center">Register</h2>
 <div class="row">
     <div class="col-md"></div>
     <div class="col-md">
@@ -33,7 +33,8 @@
                         {% render_field form.password2  class="form-control" type="password"  %}
                     
                     </div>                                                             
-                    <button class="btn btn-sm btn-info" type="submit">Submit</button>
+                    <button class="btn btn-md btn-info" type="submit">Submit</button>
+                    {{form.errors}}
                 </form>
             </div>
         </div>
@@ -41,5 +42,8 @@
     <div class="col-md"></div>
 
 </div>
-{% endblock content %}
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     
