--- a/static/template/navbar.html
+++ b/static/template/navbar.html
@@ -1,13 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand text-danger font-weight-bold font-italic" href="#"> Customer Managment</a>
+  
+  {% if request.user.user_type == "CUSTOMER"  %}
+  <a class="navbar-brand text-danger font-weight-bold font-italic" href="{% url 'customer-home' request.user.customer.id %}"> Customer Managment</a>
+  {% else  %}
+  <a class="navbar-brand text-danger font-weight-bold font-italic" href="{% url 'seller-home' request.user.seller.id %}"> Customer Managment</a>
+
+
+  {% endif %}
+      
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="#">Dashboard</a>
-        <a class="nav-link" href="#">Products</a>
-        <a class="nav-link" href="#">Customers</a>        
+        
+        {% if request.user.user_type == "CUSTOMER"  %}
+        <a class="nav-link" href="{% url 'customer_products' %}">Products</a>
+        <a class="nav-link" href="#">Sellers</a>        
+
+        {% else %}
+        <a class="nav-link" href="{% url 'customer_products' %}">Products</a>
+
+        {% endif %}
+           
       </div>
     </div>
     <a class=" btn btn-md btn-danger font-weight-bold" href="{% url 'signout' %}">LogOut</a>
