--- a/static/template/seller_home.html
+++ b/static/template/seller_home.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <br>
+
 <div class="row mb-2">
     <div class="col-md">
         <div class="card card-body">
@@ -22,20 +23,12 @@
     </div>
     <div class="col-md">
         <div class="card card-body">
-            <h5 class="card-title">Total Orders</h5>
+            <h5 class="card-title">Total Products</h5>
             <hr>
             <h1 class="text-center card-title">
-                
-                {% if orders %}
-                {{counter}}
-                {% endif %}
 
-                
-                {% if userorder %}
-                    {{userordercount}}
-                {% endif %}
-                    
-                    
+                {{totalsellerproducts}}   
+                                        
             </h1>
         </div>
     </div>
@@ -55,40 +48,24 @@
             <table class="table">
                 <tr>
                     <th>Product</th>
-                    <th>Catagory</th>
-                    <th>Date Ordered</th>
-                    <th>Status</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th>Date Created</th>
                     <th>Update</th>
                     <th>Remove</th>
                 </tr>
-                
-                {% if orders %}
-                    {% for i in orders %}
-                    <tr>
-                        <td>{{i.product}}</td>
-                        <td>{{i.product.Catagory}}</td>
-                        <td>{{i.date_created}}</td>
-                        <td>{{i.status}}</td>
-                        <td>
-                            <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'update_order' i.product.id %}">Update </a>
-                        </td>
-                        <td><a class="btn btn-outline-danger btn-sm btn-block" href="{% url 'delete_order' i.id %}">Remove</a></td>
 
-                    </tr>
-                    {% endfor %}                    
-                {% endif %}
-
-                {% if userorder %}
-                    {% for i in userorder %}
+                {% if sellerproducts %}
+                    {% for i in sellerproducts %}
                     <tr>
-                        <td>{{i.product}}</td>
-                        <td>{{i.product.Catagory}}</td>
-                        <td>{{i.date_created}}</td>
-                        <td>{{i.status}}</td>
+                        <td>{{i}}</td>
+                        <td>{{i.description}}</td>
+                        <td>{{i.price}}</td>
+                        <td>{{i.created_at}}</td>
                         <td>
-                            <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'update_order' i.product.id %}">Update </a>
+                            <a class="btn btn-outline-info btn-sm btn-block" href="">Update </a>
                         </td>
-                        <td><a class="btn btn-outline-danger btn-sm btn-block" href="{% url 'delete_order' i.id %}">Remove</a></td>
+                        <td><a class="btn btn-outline-danger btn-sm btn-block" href="">Remove</a></td>
 
                     </tr>
                     {% endfor %}                    
