--- a/static/template/delete.html
+++ b/static/template/delete.html
@@ -1,18 +1,18 @@
-{% extends 'accounts/main.html' %}
+{% extends 'main.html' %}
 {% load static %}
-{% block contents %}
+{% block content %}
 
 <div class="row">
     <div class="col-md">
         <div class="card card-body">
-            <p>Are You Sure you want to delete the order of "{{item.product.name}}" by customer "{{item.customer.name}}"?</p>
+            <p>Are You Sure you want to delete the order of "{{item.product.name}}" by customer "{{item.customer.first_name     }}"?</p>
 
             <form action="{% url 'delete_order' item.id %}" method="POST">
                 {% csrf_token %}
-                <a class="btn btn-sm btn-warning"   href="{% url 'home' }">Cancel</a>
+                <a class="btn btn-sm btn-warning"   href="{% url 'customer-home' request.user.customer.id }">Cancel</a>
                 <input class="btn btn-sm btn-danger" type="submit" name 'Confirm'>
             </form>
-            
+             
         </div>
     </div>
 </div>
