profile_pic added

--- a/static/template/signin.html
+++ b/static/template/signin.html
@@ -22,11 +22,11 @@
                 </div>
                                                                
                 {{form.errors}}
-                <input class="btn btn-block btn-info" type="submit" name="Login">                
+                <input class="btn btn-block btn-danger" type="submit" name="Login">                
             </div>
         </form>
         <div class="link">
-            Create an Account ? <a class="btn btn-info btn-sm"  href="{% url 'customer_register' %}">SignUp as Customer</a>  <a class="btn btn-info btn-sm"  href="{% url 'seller_register' %}">SignUp as Seller</a>
+             Create a New Account ?<a class=" mt-1 btn btn-info btn-block"  href="{% url 'customer_register' %}">SignUp as Customer</a>  <a class="btn btn-info btn-block"  href="{% url 'seller_register' %}">SignUp as Seller</a>
         </div>
     </div>
     <div class="col-md-4"></div>
