--- a/static/template/customer_register.html
+++ b/static/template/customer_register.html
@@ -8,7 +8,7 @@
     <div class="col-md">
         <div class="card">
             <div class="card-body">
-                <form class="form" method="POST" action="">
+                <form class="form" method="POST" enctype="multipart/form-data" action="">
                     {% csrf_token %}
                     <div class="form-group">
                         <label class="form-label">Email</label>
@@ -24,6 +24,11 @@
                         {% render_field form.last_name  class="form-control" placeholder="Last Name .."  %}
                     
                     </div>
+                    <div class="form-group">
+                        <label class="form-label">Profile Pic</label>
+                        {% render_field form.profile_pic  class="form-control" type="file" placeholder="Image upload"  %}
+                    
+                    </div>                    
                     <div class="form-group">
                         <label class="form-label">Password</label>
                         {% render_field form.password1  class="form-control" type="password" %}
