--- a/static/template/customer_register.html
+++ b/static/template/customer_register.html
@@ -13,33 +13,34 @@
                     <div class="form-group">
                         <label class="form-label">Email</label>
                         {% render_field form.email type="email" class="form-control" placeholder="Email here .."  %}
+                       <span class="text-danger">{{errors.email}}</span> 
                     </div>
                     <div class="form-group">
                         <label class="form-label">First Name</label>
                         {% render_field form.first_name  class="form-control" placeholder="First Name .."  %}
-            
-                    </div>
+                        <span class="text-danger">{{errors.first_name}}</span>                
+                    </div>                
                     <div class="form-group">
                         <label class="form-label">Last Name</label>
                         {% render_field form.last_name  class="form-control" placeholder="Last Name .."  %}
-                    
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label">Profile Pic</label>
-                        {% render_field form.profile_pic  class="form-control" type="file" placeholder="Image upload"  %}
-                    
-                    </div>                    
+                        <span class="text-danger">{{errors.last_name}}</span>               
+                    </div>           
                     <div class="form-group">
                         <label class="form-label">Password</label>
                         {% render_field form.password1  class="form-control" type="password" %}
-                    </div>                  
+                        <span class="text-danger">{{errors.password}}</span>                
+                    </div>
+
                     <div class="form-group">
                         <label class="form-label">Confirm Password</label>
                         {% render_field form.password2  class="form-control" type="password"  %}
-                    
-                    </div>                                                             
+                        <span class="text-danger">{{errors.password1}}</span>                
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Profile Pic</label>
+                        {% render_field form.profile_pic  class="" type="file" placeholder="Image upload"  %}
+                    </div>                                
                     <button class="btn btn-md btn-info" type="submit">Submit</button>
-                    {{form.errors}}
                 </form>
             </div>
         </div>
