--- a/static/template/products.html
+++ b/static/template/products.html
@@ -11,6 +11,7 @@
                     <th>Product</th>
                     <th>Seller</th>
                     <th>Price</th>
+                    <th>Buy</th>
                 </tr>
                 <tr>
                 {% for i in products%}
@@ -18,6 +19,7 @@
                     <td> {{i.name}}</td>
                     <td> {{i.seller.name}}</td>
                     <td> {{i.price}}</td>
+                    <td><a class="btn btn-danger btn-block" href="{% url 'place_order' request.user.customer.id %}">Buy</a></td>
                 </tr>
                 {% endfor %}
                 </tr>
@@ -25,6 +27,6 @@
         </div>
     </div>
 
-</div>
+</div> 
 
 {% endblock %}
