--- a/static/template/place_Product.html
+++ b/static/template/place_Product.html
@@ -7,8 +7,8 @@
 <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md">
-        <div class="mt-4 card card-body">
-            <h3 class="card-title"> Create/Update Order :</h3>
+        <div class="card card-body">
+            <h3 class="card-title"> Create Product :</h3>
             <hr>
             <form class="form text-center" action="" method="POST">
                 {% csrf_token %}
@@ -21,8 +21,7 @@
 
                 {% endfor %}
                 <input class="btn btn-info btn-sm" type="submit" name="submit">
-            </form>
-            
+            </form>            
         </div>
     </div>
     <div class="col-md-3"></div>
