--- a/static/template/seller_register.html
+++ b/static/template/seller_register.html
@@ -8,7 +8,7 @@
     <div class="col-md">
         <div class="card">
             <div class="card-body">
-                <form class="form" method="POST" action="">
+                <form class="form" method="POST" enctype="multipart/form-data" action="">
                     {% csrf_token %}
                     <div class="form-group">
                         <label class="form-label">Email</label>
@@ -24,6 +24,15 @@
                         {% render_field form.phone  class="form-control" placeholder="Phone .."  %}
                     
                     </div>
+                    <div class="form-group">
+                        <label class="form-label">Address </label>
+                        {% render_field form.address  class="form-control" placeholder="Address here"  %}
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Profile Pic</label>
+                        {% render_field form.profile_pic  class="" placeholder="Profile pic"  %}
+                    
+                    </div>                                        
                     <div class="form-group">
                         <label class="form-label">Password</label>
                         {% render_field form.password1  class="form-control" type="password" %}
