--- a/static/template/seller_home.html
+++ b/static/template/seller_home.html
@@ -67,7 +67,7 @@
                         <td>{{i.price}}</td>
                         <td>{{i.created_at}}</td>
                         <td>
-                            <a class="btn btn-outline-info btn-sm btn-block" href="">Update </a>
+                            <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'update_product' i.id %}">Update </a>
                         </td>
                         <td><a class="btn btn-outline-danger btn-sm btn-block" href="">Remove</a></td>
 
