--- a/static/template/settings_update.html
+++ b/static/template/settings_update.html
@@ -27,7 +27,7 @@
                                         <div class="form-group">
                         <label class="form-label">Customer Email</label>
                         <input type="text" readonly class="form-control" id="staticEmail" value={{customer.user}} >
-                        <small>Email cannot be changed</small>
+                        <small class="text-danger">Email cannot be changed</small>
                     </div>
                     <div class="form-group">
                         <label class="form-label">First Name</label>
