--- a/static/template/settings_update_seller.html
+++ b/static/template/settings_update_seller.html
@@ -27,7 +27,7 @@
                     <div class="form-group">
                         <label class="form-label">Seller Email</label>
                         <input type="text" readonly class="form-control" id="staticEmail" value={{seller.user}} >
-                        <small>Email cannot be changed</small>
+                        <small class="text-danger">Email cannot be changed</small>
                     </div>
                     <div class="form-group">
                         <label class="form-label">Name</label>
