permissions and urls

--- a/static/template/customer_home.html
+++ b/static/template/customer_home.html
@@ -12,8 +12,8 @@
 
             <hr>
 
-            <a class="btn btn-outline-danger btn-sm btn-block" href="{% url 'settings_user' request.user.customer.id %}">Settings</a>
-            <a class="btn btn-outline-danger btn-sm btn-block" href="{% url 'place_order' request.user.customer.id %}">Place an Order </a>
+            <a class="btn btn-outline-danger btn-sm btn-block" href="{% url 'settings_user' %}">Settings</a>
+            <a class="btn btn-outline-danger btn-sm btn-block" href="{% url 'place_order'  %}">Place an Order </a>
         </div>
     </div>
     <div class="col-md">
