--- a/static/template/settings_update.html
+++ b/static/template/settings_update.html
@@ -7,7 +7,7 @@
         <div class="card">
             <div class="card-body">
 
-            <a href="{% url 'customer-home' request.user.customer.id %}" class="btn btn-block btn-warning">Back to Profile</a>
+            <a href="{% url 'customer-home'  %}" class="btn btn-block btn-warning">Back to Profile</a>
             <hr>
             <h4 class="card-title text-center mt-3"> Account Setting</h4>
             <hr>
