--- a/static/template/delete.html
+++ b/static/template/delete.html
@@ -9,7 +9,7 @@
 
             <form action="{% url 'delete_order' item.id %}" method="POST">
                 {% csrf_token %}
-                <a class="btn btn-sm btn-warning"   href="{% url 'customer-home' request.user.customer.id }">Cancel</a>
+                <a class="btn btn-sm btn-warning"   href="{% url 'customer-home'  }">Cancel</a>
                 <input class="btn btn-sm btn-danger" type="submit" name 'Confirm'>
             </form>
              
